apps/loadtester/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loadtester
  namespace: loadtester
  annotations:
    nginx.ingress.kubernetes.io/auth-url: >-
      http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: >-
      http://host.k3d.internal:8080/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      X-Auth-Request-User,X-Auth-Request-Email,Authorization
spec:
  ingressClassName: nginx
  rules:
    - host: host.k3d.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loadtester
                port:
                  name: http
